--- a/src/sass/app/scss/layout.scss
+++ b/src/sass/app/scss/layout.scss
@@ -1,10 +1,12 @@
 /* layout */
 
+p {
+  margin-top: 0;
+  margin-bottom: 15px;
+}
+
 .flexbox {
   display: flex;
-  @include breakpoint(max-width $mobile) {
-    flex-direction: column;
-  }
 }
 
 .flex-items-center {
@@ -14,26 +16,49 @@
 .cv__container {
   margin-left: auto;
   margin-right: auto;
-  overflow: hidden;
   max-width: $container-width;
-  font-family: "Open Sans", sans-serif;
-  &* {
+  font-family: "Roboto", sans-serif;
+  & * {
     box-sizing: border-box;
   }
 }
 
 .cv__content-block {
-  padding: 20px 40px;
+  margin-left: $gutter-size;
+  margin-right: $gutter-size;
+  overflow: hidden;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 .cv__row-wrapper {
   margin-right: -$gutter-size;
   margin-left: -$gutter-size;
-  padding-bottom: 20px;
+  padding-bottom: 10px;
   display: flex;
-  align-items: center;
+  &.cv-section-title__container {
+    align-items: center;
+  }
+  &:not(.cv-section-title__container) {
+    margin-bottom: 15px;
+  }
+  &:not(.cv-section-title__container):not(:last-child) {
+    border-bottom: 1px dashed rgba(0, 0, 0, 0.24);
+  }
   @include breakpoint(max-width $mobile) {
     flex-direction: column;
+    &:not(.cv-section-title__container) {
+      .cv-col-title {
+        margin-bottom: 10px;
+      }
+    }
+    &.cv-section-title__container {
+      justify-content: center;
+      .cv__col {
+        min-width: 0;
+        flex: none;
+      }
+    }
   }
 }
 
@@ -46,37 +71,36 @@
   position: relative;
   flex: 2;
   min-width: 220px;
-  font-weight: 400;
+  font-weight: 600;
   font-size: 15px;
-  //&:after, &:before {
-  //  content: '';
-  //  position: absolute;
-  //  left: 0;
-  //  z-index: -1;
-  //  height: 300px;
-  //  width: 100%;
-  //  background-color: rgba(250, 250, 250, 1);
-  //}
+  line-height: 19px;
 }
 
 .cv-col-content {
   position: relative;
   flex: 5;
-  font-weight: 500;
+  font-weight: 400;
   font-size: 14px;
+  line-height: 21px;
 }
 
 .cv-section-title {
   margin-right: $gutter-size * 2;
-  font-size: 20px;
-  font-weight: 500;
+  font-size: 28px;
+  font-weight: 300;
+  line-height: 30px;
   letter-spacing: 2px;
   text-transform: uppercase;
+  text-align: center;
   white-space: nowrap;
   color: $color-title;
+  @include breakpoint(max-width $mobile) {
+    @include lineOnSides;
+    margin-right: 0;
+    white-space: normal;
+  }
 }
 
 .cv__delimiter {
   @include delimiter;
-  //@include lineOnSides;
 }
