--- a/src/sass/plugin/plugins.scss
+++ b/src/sass/plugin/plugins.scss
@@ -1,3 +1,5 @@
+/* Plugins */
+
 .slider__container {
   margin-left: auto;
   margin-right: auto;
@@ -19,8 +21,6 @@
 .fade__content-container {
   position: relative;
   overflow: hidden;
-  //height: 300px;
-  /* width: 600px; */
 }
 
 .fade__content-item {
