--- a/src/sass/app/scss/mixins.scss
+++ b/src/sass/app/scss/mixins.scss
@@ -50,7 +50,7 @@
 
 @mixin lineOnSides() {
   position: relative;
-  height: 100%;
+  //height: 100%;
   display: inline-block;
   &:after, &:before {
     content: "";
