--- a/src/sass/app/scss/main.scss
+++ b/src/sass/app/scss/main.scss
@@ -33,7 +33,7 @@
   margin-right: auto;
   width: 200px;
   height: 200px;
-  background: url("../../../assets/img/avatar.jpg") no-repeat;
+  background: url("../../assets/img/avatar.jpg") no-repeat;
   background-size: 300px;
   background-position: -68px center;
 }
